--- a/settings.json
+++ b/settings.json
@@ -4,7 +4,7 @@
 "autocomposing": false,
 "autorecording": true,
 "NamaBot":"ZukaChan", 
-"NomorOwner":"6281398860278",
-"NamaOwner":"Helgaa", 
+"NomorOwner":"6281262163214",
+"NamaOwner":"Radja Aditya", 
 "HelKey": ""
 }
